--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,72 @@
 
+@Book{		  baltin2001handbook,
+  address	= {Malden, Mass},
+  editor	= {Baltin, Mark and Collins, Chris},
+  publisher	= {Blackwell Publishing},
+  title		= {The handbook of contemporary syntactic theory},
+  year		= {2001}
+}
+
+@InCollection{	  kroch2001syntactic,
+  address	= {Malden, Mass},
+  author	= {Kroch, Anthony},
+  booktitle	= {The Handbook of Contemporary Syntactic Theory},
+  editor	= {Baltin, Mark and Collins, Chris},
+  publisher	= {Blackwell Publishers},
+  title		= {Syntactic Change},
+  year		= {2001}
+}
+
+@Article{	  wexler1990innateness,
+  author	= {Wexler, Kenneth},
+  journal	= {Developmental Psychobiology},
+  number	= {7},
+  pages		= {645--660},
+  title		= {Innateness and Maturation in Linguistic Development},
+  volume	= {23},
+  year		= {1990}
+}
+
+@Article{	  gleitman1981maturational,
+  author	= {Gleitman, Lila R.},
+  journal	= {Cognition},
+  number	= {1},
+  pages		= {103--114},
+  title		= {Maturational Determinants of Language Growth},
+  volume	= {10},
+  year		= {1981}
+}
+
+@Article{	  abels2012linear,
+  author	= {Abels, Klaus and Neeleman, Ad},
+  journal	= {Syntax},
+  number	= {1},
+  pages		= {25--74},
+  title		= {Linear Asymmetries and the {LCA}},
+  volume	= {15},
+  year		= {2012}
+}
+
+@Article{	  fukui1998symmetry,
+  author	= {Fukui, Naoki and Takano, Yuji},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {1},
+  pages		= {27--86},
+  title		= {Symmetry in Syntax: Merge and Demerge},
+  volume	= {7},
+  year		= {1998}
+}
+
+@Article{	  johnson2004etiology,
+  author	= {Johnson, Kyle},
+  journal	= {Nordlyd: Troms{\o} University Working Papers on Language
+		  \\& Linguistics},
+  number	= {1},
+  title		= {Towards an Etiology of Adjunct Islands},
+  volume	= {31},
+  year		= {2004}
+}
+
 @Article{	  gumiel-molina2024variacion,
   author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
 		  P{\'e}rez-Jim{\'e}nez, Isabel},
