--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  fabregas2024verbos,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Revista de Investigaci{\'o}n Ling{\"u}{\'i}stica},
+  pages		= {41--65},
+  title		= {Los verbos de fracaso y amago y la identificaci{\'o}n del
+		  significado gramatical},
+  volume	= {27},
+  year		= {2024}
+}
+
 @Book{		  baltin2001handbook,
   address	= {Malden, Mass},
   editor	= {Baltin, Mark and Collins, Chris},
