--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  goncharov2024very,
+  author	= {Goncharov, Julie},
+  journal	= {Linguistics and Philosophy},
+  title		= {About Very},
+  year		= {2024}
+}
+
 @Article{	  fabregas2024verbos,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Revista de Investigaci{\'o}n Ling{\"u}{\'i}stica},
