--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  zompi2024principled,
+  author	= {Zomp{\`\i}, Stanislao},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {A Principled Exception to the M{\"u}ller-Takano
+		  Generalization: A Belated Follow-up to Richards (2004)},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Article{	  goncharov2024very,
   author	= {Goncharov, Julie},
   journal	= {Linguistics and Philosophy},
