--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  gumiel-molina2024lexico,
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  journal	= {Bolet{\'i}n de Filolog{\'i}a},
+  number	= {2},
+  pages		= {55--86},
+  title		= {Del L{\'e}xico a la Pragm{\'a}tica en la expresi{\'o}n de
+		  la evidencialidad y la perspectiva en espa{\~n}ol},
+  volume	= {59}
+}
+
 @Article{	  zompi2024principled,
   author	= {Zomp{\`\i}, Stanislao},
   journal	= {Glossa: a journal of general linguistics},
