--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,46 @@
 
+@InBook{	  chomsky1977whmovement,
+  address	= {New York},
+  author	= {Chomsky, Noam},
+  booktitle	= {Formal Syntax},
+  editor	= {Culicover, Peter and Wasow, Thomas and Akmajian, Adrian},
+  pages		= {71-132},
+  publisher	= {Academic Press},
+  title		= {On Wh-Movement},
+  year		= {1977}
+}
+
+@InBook{	  chomsky1973conditions,
+  address	= {New York},
+  author	= {Chomsky, Noam},
+  booktitle	= {A Festschrift for Morris Halle},
+  editor	= {Kiparsky, Paul and Anderson, Stephen R.},
+  pages		= {232-286},
+  publisher	= {Holt, Rinehart and Winston},
+  title		= {Conditions on Transformations},
+  year		= {1973}
+}
+
+@Article{	  munozperez2018recog,
+  author	= {Mu{\~n}oz P{\'e}rez, Carlos},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {0},
+  title		= {Recognizing copies: On the definition of
+		  Non-Distinctiveness},
+  volume	= {3},
+  year		= {2018}
+}
+
+@Article{	  acedo-matellan2025bound,
+  author	= {Acedo-Matell{\'a}n, V{\'i}ctor and Real-Puigdollers,
+		  Cristina},
+  journal	= {Natural Language and Linguist Theory},
+  title		= {Boundedness in locative prepositions: Evidence from
+		  Catalan},
+  year		= {2025}
+}
+
 @Article{	  gumiel-molina2024lexico,
   author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
 		  P{\'e}rez-Jim{\'e}nez, Isabel},
