--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,68 @@
 
+@Article{	  landau2025typerestricted,
+  author	= {Landau, Idan},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {97--129},
+  title		= {Type-Restricted Argument Ellipsis and Generalized
+		  Quantifiers},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  hardie2025be,
+  author	= {Hardie, Sophie and Titov, Elena},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {195--208},
+  title		= {To Be or Not To Be?},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  newman2025probing,
+  author	= {Newman, Elise},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {171--193},
+  title		= {Probing for the Closest {DP}: A Reply to Branan and
+		  Erlewine 2022},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  carstens2025nguni,
+  author	= {Carstens, Vicki},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--51},
+  title		= {Nguni Bare Nouns: Licensing without Case},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  park2025korean,
+  author	= {Park, Dongwoo},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {131--169},
+  title		= {Korean {VP}-Ellipsis and a Derivational Approach to
+		  Ellipsis},
+  volume	= {56},
+  year		= {2025}
+}
+
+@Article{	  gong2025case,
+  author	= {Gong, Zhiyu Mia},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {53--95},
+  title		= {Case in Wholesale Late Merger: Evidence from Mongolian
+		  Scrambling},
+  volume	= {56},
+  year		= {2025}
+}
+
 @InBook{	  chomsky1977whmovement,
   address	= {New York},
   author	= {Chomsky, Noam},
