--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Book{		  zanuttini2013annotated,
+  address	= {New York},
+  editor	= {Zanuttini, Raffaella and Leu, Thomas and Kayne, Richard},
+  publisher	= {Wiley},
+  title		= {An Annotated Syntax Reader - Lasting Insights and
+		  Questions},
+  year		= {2013}
+}
+
+@Article{	  serrano-losada2017english,
+  author	= {Serrano-Losada, Mario},
+  journal	= {Journal of Historical Linguistics},
+  number	= {1-2},
+  pages		= {160--189},
+  title		= {On English Turn out and Spanish Resultar Mirative
+		  Constructions: A Case of Ongoing Grammaticalization?},
+  volume	= {7},
+  year		= {2017}
+}
+
 @Article{	  landau2025typerestricted,
   author	= {Landau, Idan},
   journal	= {Linguistic Inquiry},
