--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  messick2025casecopying,
+  author	= {Messick, Troy and Raghotham, Sreekar},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {On Case-Copying Reflexives},
+  year		= {2025}
+}
+
+@Article{	  yuan2025morphological,
+  author	= {Yuan, Michelle},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Morphological Conditions on Movement-Chain Resolution},
+  year		= {2025}
+}
+
 @Book{		  zanuttini2013annotated,
   address	= {New York},
   editor	= {Zanuttini, Raffaella and Leu, Thomas and Kayne, Richard},
