--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  hassen2025preposition,
+  author	= {Hassen, Amal and Abeill{\'e}, Anne},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Preposition Omission in French Interrogative Sluices:
+		  Empirical Findings and Theoretical Implications},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  falletti2025ghost,
+  author	= {Falletti, Federico and Remijsen, Bert},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Ghost Segments in Sengwer Nouns},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Article{	  messick2025casecopying,
   author	= {Messick, Troy and Raghotham, Sreekar},
   journal	= {Natural Language and Linguistic Theory},
