--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@Article{	  dossantos2025verbinitial,
+  author	= {{\noopsort{santos}}dos Santos, Wesley},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Verb-Initial Clauses in Kawah{\'i}va},
+  year		= {2025}
+}
+
+@Article{	  tatsumi2025how,
+  author	= {Tatsumi, Yuta},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {How Complex Are Complex Cardinals?},
+  year		= {2025}
+}
+
+@Article{	  tollan2025effects,
+  author	= {Tollan, Rebecca and Doroudiani, Bahareh and Heller,
+		  Daphna},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {Effects of Uniqueness on Extraction from Definite {NP}
+		  Objects},
+  year		= {2025}
+}
+
+@Article{	  degano2025ups,
+  author	= {Degano, Marco and Marty, Paul and Ramotowska, Sonia and
+		  Aloni, Maria and Breheny, Richard and Romoli, Jacopo and
+		  Sudo, Yasutada},
+  journal	= {Natural Language Semantics},
+  title		= {The Ups and Downs of Ignorance},
+  year		= {2025}
+}
+
+@Article{	  hunter2024kallini,
+  author	= {Hunter, Tim},
+  journal	= {arXiv},
+  title		= {Kallini et al. (2024) Do Not Compare Impossible Languages
+		  with Constituency-Based Ones},
+  year		= {2024}
+}
+
 @Article{	  hassen2025preposition,
   author	= {Hassen, Amal and Abeill{\'e}, Anne},
   journal	= {Glossa: a journal of general linguistics},
