--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,3 @@
-@PREAMBLE{ {\providecommand{\noopsort}[1]{}} }
 
 @Article{	  oshima2025differential,
   author	= {Oshima, David Y.},
@@ -17,7 +16,7 @@
 }
 
 @Article{	  dossantos2025verbinitial,
-  author	= {{\noopsort{Santos}}{dos Santos}, Wesley},
+  author	= {dos Santos, Wesley},
   journal	= {Natural Language and Linguistic Theory},
   title		= {Verb-Initial Clauses in Kawah{\'i}va},
   year		= {2025}
@@ -199,7 +198,6 @@
   author	= {Mu{\~n}oz P{\'e}rez, Carlos},
   journal	= {Glossa: a journal of general linguistics},
   number	= {1},
-  pages		= {0},
   title		= {Recognizing copies: On the definition of
 		  Non-Distinctiveness},
   volume	= {3},
@@ -890,7 +888,7 @@
   address	= {London ; New York},
   author	= {Butt, John and Benjamin, Carmen and Moreira Rodr\'iguez,
 		  Antonia},
-  publisher	= {Routledge, Taylor \& Francis Group& Francis Group},
+  publisher	= {Routledge, Taylor \and Francis Groupand Francis Group},
   title		= {A New Reference Grammar of Modern Spanish},
   year		= {2019}
 }
@@ -2119,8 +2117,7 @@
 }
 
 @Article{	  burukina2024big,
-  author	= {Burukina, Irina and Borise, Lena and \noopsortdikkenden
-		  Dikken, Marcel},
+  author	= {Burukina, Irina and Borise, Lena and den Dikken, Marcel},
   journal	= {Glossa: a journal of general linguistics},
   number	= {1},
   title		= {A `big {DP}' analysis of Russian copular constructions
@@ -3952,7 +3949,7 @@
 }
 
 @Article{	  dikken2007data,
-  author	= {Dikken, Marcel Den and Bernstein, Judy B. and Tortora,
+  author	= {den Dikken, Marcel and Bernstein, Judy B. and Tortora,
 		  Christina and Zanuttini, Raffaella},
   number	= {3},
   pages		= {335--352},
@@ -7830,7 +7827,7 @@
 }
 
 @Unpublished{	  dendikken1995copulas,
-  author	= {Den Dikken, Marcel},
+  author	= {den Dikken, Marcel},
   title		= {Copulas},
   year		= {1995}
 }
@@ -8126,7 +8123,7 @@
 @Book{		  camacho2012coordination,
   author	= {Camacho, Jos{\'e}},
   pages		= {187},
-  publisher	= {Springer Science \& Business Media},
+  publisher	= {Springer Science \and Business Media},
   title		= {The Structure of Coordination: Conjunction and Agreement
 		  Phenomena in Spanish and Other Languages},
   year		= {2012}
@@ -22096,7 +22093,7 @@
 }
 
 @Article{	  dikken2007phase-extension,
-  author	= {Dikken, Marcel den},
+  author	= {den Dikken, Marcel},
   journal	= {Theoretical Linguistics},
   number	= {1},
   pages		= {1--41},
@@ -22119,7 +22116,7 @@
 }
 
 @Article{	  dikken2007phase-extension-reply,
-  author	= {Dikken, Marcel den},
+  author	= {den Dikken, Marcel},
   journal	= {Theoretical Linguistics},
   number	= {1},
   title		= {Phase {Extension}: {A} reply},
@@ -25708,7 +25705,7 @@
   chapter	= {9},
   editor	= {Hayes, R.},
   pages		= {279-362},
-  publisher	= {Wiley \& Sons},
+  publisher	= {Wiley \and Sons},
   title		= {The Cognitive Basis For Linguistic Structures},
   year		= {1970}
 }
@@ -32738,14 +32735,13 @@
   year		= {2002}
 }
 
-@Article{	  dikken2006ieither/i-float-and-,
-  author	= {Dikken, Marcel},
+@Article{	  dikken2006either,
+  author	= {den Dikken, Marcel},
   journal	= {Natural Language and Linguistic Theory},
   number	= {3},
   pages		= {689--749},
   publisher	= {Springer Netherlands},
-  title		= {{$<$}i{$>$}Either{$<$}/i{$>$}-Float and the Syntax of
-		  Co-{$<$}i{$>$}or{$<$}/i{$>$}-dination},
+  title		= {Either-Float and the Syntax of Coordination},
   volume	= {24},
   year		= {2006}
 }
@@ -33076,7 +33072,7 @@
 @InCollection{	  richards2005explaining-expl,
   author	= {Richards, Marc and Biberauer, Theresa},
   booktitle	= {The function of function words and functional categories},
-  editor	= {Dikken, M. and Tortora, C.},
+  editor	= {den Dikken, Marcel and Tortora, Cristina},
   publisher	= {J. Benjamins Pub.},
   series	= {Linguistik aktuell},
   title		= {Explaining {E}xpl},
@@ -34540,7 +34536,7 @@
   journal	= {Language Acquisition},
   number	= {2},
   pages		= {73--102},
-  publisher	= {Taylor \& Francis Ltd},
+  publisher	= {Taylor \and Francis Ltd},
   title		= {On the Quantificational Status of Indefinites: The View
 		  From Child Language.},
   volume	= {13},
@@ -34552,7 +34548,7 @@
   journal	= {Language Acquisition},
   number	= {2},
   pages		= {67--81},
-  publisher	= {Taylor \& Francis Ltd},
+  publisher	= {Taylor \and Francis Ltd},
   title		= {QR in Child Grammar: Evidence from Antecedent-Contained
 		  Deletion.},
   volume	= {16},
@@ -34859,7 +34855,7 @@
 }
 
 @Article{	  dikken2000pseudoclefts-and-ell,
-  author	= {Dikken, Marcel den and Meinunger, Andr{\'e} and Wilder,
+  author	= {den Dikken, Marcel and Meinunger, Andr{\'e} and Wilder,
 		  Chris},
   journal	= {Studia Linguistica},
   number	= {1},
@@ -37134,7 +37130,8 @@
 }
 
 @Unpublished{	  larson1997intensional-transiti,
-  author	= {Larson, Richard K. and den Dikken, M. and P. Ludlow},
+  author	= {Larson, Richard K. and den Dikken, Marcel and Ludlow,
+		  Peter},
   title		= {Intensional transitive verbs and abstract clausal
 		  complementation},
   year		= {1997}
@@ -37798,7 +37795,7 @@
   editor	= {Hans Broekhuis and Norvert Corver and Riny Huybregts and
 		  Ursula Kleinhenz and Jan Koster},
   publisher	= {Mouton de Gruyter},
-  title		= {Transparent, free\ldots and polarised: The (poli)tics of
+  title		= {Transparent, free{\ldots} and polarised: The (poli)tics of
 		  polarity in transparent free relatives},
   year		= {2005}
 }
@@ -49351,7 +49348,7 @@
 
 @Book{		  2013the-cambridge-handbo,
   address	= {Cambridge},
-  editor	= {Dikken, Marcel den},
+  editor	= {den Dikken, Marcel},
   publisher	= {Cambridge University Press},
   title		= {The Cambridge handbook of generative syntax},
   year		= {2013}
@@ -65329,7 +65326,7 @@
 }
 
 @Article{	  dikken2017copular-constru,
-  author	= {Dikken, Marcel den and O'Neill, Teresa},
+  author	= {den Dikken, Marcel and O'Neill, Teresa},
   journal	= {Oxford Research Encyclopedia of Linguistics},
   title		= {Copular {Constructions} in {Syntax}},
   year		= {2017},
@@ -65406,7 +65403,7 @@
 
 @Book{		  dikken2006relators-and-li,
   address	= {Cambridge, Mass},
-  author	= {Dikken, Marcel den},
+  author	= {den Dikken, Marcel},
   number	= {47},
   publisher	= {MIT Press},
   series	= {Linguistic inquiry monographs},
