--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  chomsky1977essays,
+  address	= {New York},
+  author	= {Chomsky, Noam},
+  publisher	= {North-Holland},
+  title		= {Essays on form and interpretation},
+  year		= {1977}
+}
+
 @Article{	  oshima2025differential,
   author	= {Oshima, David Y.},
   journal	= {Natural Language and Linguistic Theory},
@@ -888,7 +896,7 @@
   address	= {London ; New York},
   author	= {Butt, John and Benjamin, Carmen and Moreira Rodr\'iguez,
 		  Antonia},
-  publisher	= {Routledge, Taylor \and Francis Groupand Francis Group},
+  publisher	= {Routledge, Taylor and Francis Groupand Francis Group},
   title		= {A New Reference Grammar of Modern Spanish},
   year		= {2019}
 }
@@ -34536,7 +34544,7 @@
   journal	= {Language Acquisition},
   number	= {2},
   pages		= {73--102},
-  publisher	= {Taylor \and Francis Ltd},
+  publisher	= {Taylor and Francis Ltd},
   title		= {On the Quantificational Status of Indefinites: The View
 		  From Child Language.},
   volume	= {13},
@@ -34548,7 +34556,7 @@
   journal	= {Language Acquisition},
   number	= {2},
   pages		= {67--81},
-  publisher	= {Taylor \and Francis Ltd},
+  publisher	= {Taylor and Francis},
   title		= {QR in Child Grammar: Evidence from Antecedent-Contained
 		  Deletion.},
   volume	= {16},
