--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  landau2025reciprocal,
+  author	= {Landau, Idan},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {Reciprocal Shift and Symmetry Breaking},
+  year		= {2025}
+}
+
+@Article{	  mizuno2025argument,
+  author	= {Mizuno, Teruyuki},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Argument Ellipsis as Topic Deletion},
+  year		= {2025}
+}
+
 @Book{		  chomsky1977essays,
   address	= {New York},
   author	= {Chomsky, Noam},
