--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  pomino2025small,
+  author	= {Pomino, Natascha and Remberger, Eva-Maria},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Small Syntactic Terminal Nodes, Large Vocabulary Items: A
+		  Spanning Approach to Irregular Romance Verb Inflection},
+  volume	= {10},
+  year		= {2025}
+}
+
+@Article{	  poppels2025novel,
+  author	= {Poppels, Till and Kehler, Andrew},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Novel Cases of Sluicing with Mismatched Antecedents:
+		  Theoretical Consequences},
+  volume	= {10},
+  year		= {2025}
+}
+
 @Article{	  landau2025reciprocal,
   author	= {Landau, Idan},
   journal	= {Natural Language \\& Linguistic Theory},
