--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  asami2025subjectless,
+  author	= {Asami, Daiki and Bruening, Benjamin},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Subjectless Readings of Again: A Response to Bale (2007)
+		  and Smith and Yu (2021)},
+  year		= {2025}
+}
+
 @Article{	  pomino2025small,
   author	= {Pomino, Natascha and Remberger, Eva-Maria},
   journal	= {Glossa: a journal of general linguistics},
