--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -29,7 +29,7 @@
 
 @Article{	  landau2025reciprocal,
   author	= {Landau, Idan},
-  journal	= {Natural Language \\& Linguistic Theory},
+  journal	= {Natural Language and Linguist Theory},
   title		= {Reciprocal Shift and Symmetry Breaking},
   year		= {2025}
 }
