--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  roemling2025visualizing,
+  author	= {Roemling, Dana and Winter, Bodo and Grieve, Jack},
+  journal	= {Journal of Linguistic Geography},
+  pages		= {1--15},
+  title		= {Visualizing Map Data for Linguistics Using Ggplot2: A
+		  Tutorial with Examples from Dialectology and Typology},
+  year		= {2025}
+}
+
 @Article{	  asami2025subjectless,
   author	= {Asami, Daiki and Bruening, Benjamin},
   journal	= {Natural Language and Linguistic Theory},
