--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@InBook{	  silvagni2024spanish,
+  author	= {Silvagni, Federico},
+  booktitle	= {Formal Perspectives on Secondary Predication},
+  editor	= {den Dikken, Marcel and Kishimoto, Hideki},
+  pages		= {339-382},
+  publisher	= {De Gruyter},
+  title		= {Spanish Depictives and Aspectual Consecutio in Non-Verbal
+		  Environments},
+  year		= {2024}
+}
+
 @Article{	  roemling2025visualizing,
   author	= {Roemling, Dana and Winter, Bodo and Grieve, Jack},
   journal	= {Journal of Linguistic Geography},
