--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  begus2023large,
+  author	= {Begu{\v s}, Ga{\v s}per and D{\k a}bkowski, Maksymilian
+		  and Rhodes, Ryan},
+  number	= {arXiv:2305.00948},
+  title		= {Large Linguistic Models: Analyzing Theoretical Linguistic
+		  Abilities of {LLM}s},
+  year		= {2023}
+}
+
 @InBook{	  silvagni2024spanish,
   author	= {Silvagni, Federico},
   booktitle	= {Formal Perspectives on Secondary Predication},
