--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Book{		  alatis1970monograph,
+  address	= {Washington, D.C},
+  editor	= {Alatis, James},
+  publisher	= {Georgetown University Press},
+  title		= {Monograph Series on Languages and Linguistics. 20th Annual
+		  Round Table Linguistics and the Teaching of Standard
+		  English To Speakers of Other Languages or Dialects},
+  year		= {1970}
+}
+
+@InBook{	  spolsky1970linguistics,
+  address	= {Washington, D.C},
+  author	= {Spolsky, Bernard},
+  booktitle	= {Monograph Series on Languages and Linguistics. 20th Annual
+		  Round Table Linguistics and the Teaching of Standard
+		  English To Speakers of Other Languages or Dialects},
+  editor	= {Alatis, James},
+  pages		= {143-156},
+  publisher	= {Georgetown University Press},
+  title		= {Linguistics and Language Pedagogy. Applications or
+		  Implications?},
+  year		= {1970}
+}
+
 @Article{	  begus2023large,
   author	= {Begu{\v s}, Ga{\v s}per and D{\k a}bkowski, Maksymilian
 		  and Rhodes, Ryan},
