--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@Article{	  biezma2025insubordinated,
+  author	= {Biezma, Mar{\'i}a},
+  journal	= {Natural Language Semantics},
+  title		= {Insubordinated If-Clauses as Discourse Subordination},
+  year		= {2025}
+}
+
+@Article{	  alstott2025first,
+  author	= {Alstott, Johanna},
+  journal	= {Natural Language Semantics},
+  title		= {First and Last as Superlatives of before and After},
+  year		= {2025}
+}
+
 @Book{		  alatis1970monograph,
   address	= {Washington, D.C},
   editor	= {Alatis, James},
