--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  bylinina2015nonsuperlative,
+  author	= {Bylinina, Lisa and Ivlieva, Natalia and Podobryaev,
+		  Alexander and Sudo, Yasutada},
+  journal	= {Ms., Meertens Instituut, Institut Jean Nicod, Higher
+		  School of Economics, and UCL},
+  title		= {A Non-Superlative Semantics for Ordinals and the Syntax
+		  and Semantics of Comparison Classes},
+  year		= {2015}
+}
+
 @Article{	  biezma2025insubordinated,
   author	= {Biezma, Mar{\'i}a},
   journal	= {Natural Language Semantics},
