--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  biezma2025urdu,
+  author	= {Biezma, Mar{\'i}a and Butt, Miriam and Jabeen, Farhat and
+		  Mumtaz, Benazir},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Urdu/Hindi Polar Kya as an Expression of Uncertainty},
+  year		= {2025}
+}
+
+@Article{	  murugesan2025omnivorous,
+  author	= {Murugesan, Gurujegan and Driemel, Imke and Murphy,
+		  Andrew},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Omnivorous Person, Number and Gender in Mundari},
+  year		= {2025}
+}
+
 @Article{	  bylinina2015nonsuperlative,
   author	= {Bylinina, Lisa and Ivlieva, Natalia and Podobryaev,
 		  Alexander and Sudo, Yasutada},
