--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  calinescu2025lexical,
+  author	= {C{\u a}linescu, Lia and Ramchand, Gillian and Baggio,
+		  Giosu{\`e}},
+  journal	= {Language, Cognition and Neuroscience},
+  pages		= {1--29},
+  title		= {Lexical Semantics Trumps Syntax during Noun Composition in
+		  Predication and Modification Contexts: Insights from the
+		  N400 and Alpha and Beta Band Synchronisation},
+  year		= {2025}
+}
+
 @Article{	  biezma2025urdu,
   author	= {Biezma, Mar{\'i}a and Butt, Miriam and Jabeen, Farhat and
 		  Mumtaz, Benazir},
