--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Article{	  hammerly2025interpretation,
+  author	= {Hammerly, Christopher and Mathieu, {\"E}ric},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {On the Interpretation of Long-Distance Agreement in Border
+		  Lakes Ojibwe},
+  year		= {2025}
+}
+
+@Article{	  liao2025tale,
+  author	= {Liao, Wei-wen Roger and Jheng, Wei-Cherng Sam},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {A Tale of Two {EVEN}s},
+  year		= {2025}
+}
+
 @Article{	  calinescu2025lexical,
   author	= {C{\u a}linescu, Lia and Ramchand, Gillian and Baggio,
 		  Giosu{\`e}},
