--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,40 @@
 
+@Book{		  radford2023analysing,
+  author	= {Radford, Andrew},
+  publisher	= {Cambridge University Press},
+  title		= {Analysing English Sentence Structure: An Intermediate
+		  Course in Syntax},
+  year		= {2023}
+}
+
+@Book{		  radford2019relative,
+  address	= {Cambridge},
+  author	= {Radford, Andrew},
+  publisher	= {Cambridge University Press},
+  title		= {Relative Clauses: Structure and Variation in Everyday
+		  English},
+  volume	= {(161)},
+  year		= {2019}
+}
+
+@Book{		  radford2018colloquial,
+  address	= {Cambridge},
+  author	= {Radford, Andrew},
+  publisher	= {Cambridge university press},
+  title		= {Colloquial English: Structure and Variation},
+  volume	= {(158)},
+  year		= {2018}
+}
+
+@Article{	  grano2025synchronizing,
+  author	= {Grano, Thomas and Kitagawa, Yoshihisa},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Synchronizing Meaning with Sound and beyond: The Role of
+		  Physical Markings in Thematic, Modal, and Informational
+		  Interpretations},
+  year		= {2025}
+}
+
 @Article{	  hammerly2025interpretation,
   author	= {Hammerly, Christopher and Mathieu, {\"E}ric},
   journal	= {Natural Language and Linguistic Theory},
