--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  chierchia2025movement,
+  author	= {Chierchia, Gennaro},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Movement and Crossover in Three Languages},
+  year		= {2025}
+}
+
 @Book{		  radford2023analysing,
   author	= {Radford, Andrew},
   publisher	= {Cambridge University Press},
