--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  berro2025indirect,
+  author	= {Berro, Ane and Odria, Ane and Fern{\'a}ndez, Beatriz},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Indirect Causatives in Basque: The Syntax of Implicit
+		  Causees},
+  year		= {2025}
+}
+
+@Article{	  luo2025impersonal,
+  author	= {Luo, Zhuosi},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Impersonal Pronouns: Typological Insights from Teochew
+		  Implicit Causees},
+  year		= {2025}
+}
+
 @Article{	  chierchia2025movement,
   author	= {Chierchia, Gennaro},
   journal	= {Natural Language and Linguistic Theory},
