--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,54 @@
 
+@Article{	  demirdache2007syntax,
+  author	= {Demirdache, Hamida and Uribe-Etxebarria, Myriam},
+  journal	= {Lingua Approaches to Tense and Tense Construal},
+  number	= {2},
+  pages		= {330--366},
+  title		= {The Syntax of Time Arguments},
+  volume	= {117},
+  year		= {2007}
+}
+
+@Article{	  smith2007tense,
+  author	= {Smith, Carlota S.},
+  journal	= {Lingua Approaches to Tense and Tense Construal},
+  number	= {2},
+  pages		= {419--436},
+  title		= {Tense and Temporal Interpretation},
+  volume	= {117},
+  year		= {2007}
+}
+
+@Article{	  ogihara2007tensea,
+  author	= {Ogihara, Toshiyuki},
+  journal	= {Lingua Approaches to Tense and Tense Construal},
+  number	= {2},
+  pages		= {392--418},
+  title		= {Tense and Aspect in Truth-Conditional Semantics},
+  volume	= {117},
+  year		= {2007}
+}
+
+@Article{	  kusumoto2005quantification,
+  author	= {Kusumoto, Kiyomi},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {317--357},
+  title		= {On the Quantification over Times in Natural Language},
+  volume	= {13},
+  year		= {2005}
+}
+
+@Article{	  kamp1971formal,
+  author	= {Kamp, Hans},
+  journal	= {Theoria},
+  number	= {3},
+  pages		= {227--273},
+  title		= {Formal Properties of `Now'},
+  volume	= {37},
+  year		= {1971}
+}
+
 @Article{	  berro2025indirect,
   author	= {Berro, Ane and Odria, Ane and Fern{\'a}ndez, Beatriz},
   journal	= {Natural Language and Linguistic Theory},
