--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  jarvis2025raising,
+  author	= {Jarvis, Rebecca},
+  journal	= {Natural Language andLinguistic Theory},
+  title		= {Raising and Head-External Relatives in Atchan},
+  year		= {2025}
+}
+
 @Article{	  demirdache2007syntax,
   author	= {Demirdache, Hamida and Uribe-Etxebarria, Myriam},
   journal	= {Lingua Approaches to Tense and Tense Construal},
