--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,84 @@
 
+@Book{		  2018the-oxford-hand-ellipsis,
+  address	= {Oxford, U.K},
+  editor	= {van Craenenbroeck, Jeroen and Temmerman, Tanja},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Ellipsis},
+  year		= {2018}
+}
+
+@PhDThesis{	  kusumoto1999tense,
+  author	= {Kusumoto, Kiyomi},
+  school	= {University of Massachusetts at Amherst},
+  title		= {Tense in Embedded Contexts},
+  year		= {1999}
+}
+
+@InBook{	  johnson2018gapping,
+  address	= {Oxford, U.K},
+  author	= {Johnson, Kyle},
+  booktitle	= {The Oxford Handbook of Ellipsis},
+  editor	= {van Craenenbroeck, Jeroen and Temmerman, Tanja},
+  publisher	= {Oxford University Press},
+  title		= {Gapping and Stripping},
+  year		= {2018}
+}
+
+@InCollection{	  johnson2006gapping,
+  author	= {Johnson, Kyle},
+  booktitle	= {The Blackwell Companion to Syntax},
+  pages		= {407-435},
+  publisher	= {John Wiley and Sons, Ltd},
+  title		= {Gapping},
+  year		= {2006}
+}
+
+@Article{	  adamson2025gender,
+  author	= {Adamson, Luke James and Anagnostopoulou, Elena},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--50},
+  title		= {Gender Features and Coordination Resolution in Greek and
+		  Other Three-Gendered Languages: Implications for the
+		  Crosslinguistic Representation of Gender},
+  year		= {2025}
+}
+
+@Article{	  johnson2009gappinga,
+  author	= {Johnson, Kyle},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {289--328},
+  title		= {Gapping Is Not ({VP}-) Ellipsis},
+  volume	= {40},
+  year		= {2009}
+}
+
+@InCollection{	  johson2000few,
+  author	= {Johnson, Kyle},
+  booktitle	= {{UMOP} 23: Issues in Semantics and Its Interface},
+  editor	= {Kusumoto, Kiyomi and Villalta, Elisabeth},
+  title		= {Few Dogs Eat Whiskas or Cats Alpo},
+  year		= {2000}
+}
+
+@Article{	  ogihara1995semantics,
+  author	= {Ogihara, Toshiyuki},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {663--679},
+  title		= {The Semantics of Tense in Embedded Clauses},
+  volume	= {26},
+  year		= {1995}
+}
+
+@Article{	  arregui1998tense,
+  author	= {Arregui, Ana and Kusumoto, Kiyomi},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {1--18},
+  title		= {Tense in Temporal Adjunct Clauses},
+  year		= {1998}
+}
+
 @Article{	  jarvis2025raising,
   author	= {Jarvis, Rebecca},
   journal	= {Natural Language andLinguistic Theory},
