--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  beltrama2025evaluation,
+  author	= {Beltrama, Andrea},
+  journal	= {Natural Language Semantics},
+  title		= {Evaluation, Thresholds, and Practical Commitments: The
+		  Grammar of Adjectival Mildness},
+  year		= {2025}
+}
+
+@Article{	  murphy2025fundamental,
+  author	= {Murphy, Elliot and Leivada, Evelina and Dentella, Vittoria
+		  and Gunther, Fritz and Marcus, Gary},
+  journal	= {arXiv},
+  title		= {Fundamental Principles of Linguistic Structure Are Not
+		  Represented by o3},
+  volume	= {2502.10934},
+  year		= {2025}
+}
+
 @Book{		  2018the-oxford-hand-ellipsis,
   address	= {Oxford, U.K},
   editor	= {van Craenenbroeck, Jeroen and Temmerman, Tanja},
