--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,18 @@
 
+@InBook{	  panzeri2012can,
+  address	= {Berlin, Heidelberg},
+  author	= {Panzeri, Francesca and Foppolo, Francesca},
+  booktitle	= {Logic, Language and Meaning},
+  editor	= {Aloni, Maria and Kimmelman, Vadim and Roelofsen, Floris
+		  and Sassoon, Galit W. and Schulz, Katrin and Westera,
+		  Matthijs},
+  pages		= {170-179},
+  publisher	= {Springer},
+  title		= {Can Children Tell Us Something about the Semantics of
+		  Adjectives?},
+  year		= {2012}
+}
+
 @Article{	  beltrama2025evaluation,
   author	= {Beltrama, Andrea},
   journal	= {Natural Language Semantics},
