--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Book{		  schneider2020statistics,
+  author	= {Schneider, Dr Gerold and Lauber, Max},
+  title		= {Statistics for {{Linguists}}},
+  year		= {2020}
+}
+
 @InBook{	  panzeri2012can,
   address	= {Berlin, Heidelberg},
   author	= {Panzeri, Francesca and Foppolo, Francesca},
