--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@InBook{	  schwarzschild2010comparative,
+  address	= {Cambidge, Mass.},
+  author	= {Schwarzschild, Roger},
+  booktitle	= {Proceedings of the {MIT} Workshop on Comparatives},
+  editor	= {Erlewine, Michael and Sudo, Yasutada},
+  pages		= {87-105},
+  title		= {Comparative Markers and Standard Markers},
+  year		= {2010}
+}
+
+@Article{	  menon2014grammatical,
+  author	= {Menon, Mythili and Pancheva, Roumyana},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  title		= {The Grammatical Life of Property Concept Roots in
+		  Malayalam},
+  year		= {2014}
+}
+
+@Book{		  johannessen1998coordination,
+  address	= {New York},
+  author	= {Johannessen, Janne Bondi},
+  publisher	= {Oxford Univ. Press},
+  title		= {Coordination},
+  year		= {1998}
+}
+
+@Article{	  aleza-izquierdo2024aspectos,
+  author	= {Aleza-Izquierdo, Milagros},
+  title		= {Aspectos gramaticales de la lengua espa{\~n}ola en
+		  am{\'e}rica (pa{\'i}ses hispanoamericanos)},
+  volume	= {13},
+  year		= {2024}
+}
+
 @Book{		  schneider2020statistics,
   author	= {Schneider, Dr Gerold and Lauber, Max},
   title		= {Statistics for {{Linguists}}},
