--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  perezjimenez2008clausulasa,
+  address	= {Madrid},
+  author	= {P{\'e}rez Jim{\'e}nez, Isabel},
+  publisher	= {Visor Libros},
+  title		= {Las Cl{\'a}usulas Absolutas},
+  year		= {2008}
+}
+
+@Book{		  rodriguezramalle2005manual,
+  address	= {Madrid},
+  author	= {Rodr{\'i}guez Ramalle, Teresa Mar{\'i}a},
+  publisher	= {Castalia},
+  title		= {Manual de sintaxis del espa{\~n}ol},
+  volume	= {(4)},
+  year		= {2005}
+}
+
 @InBook{	  schwarzschild2010comparative,
   address	= {Cambidge, Mass.},
   author	= {Schwarzschild, Roger},
