--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Book{		  citko2014phase,
+  author	= {Citko, Barbara},
+  publisher	= {Cambridge University Press},
+  title		= {Phase Theory: An Introduction},
+  year		= {2014}
+}
+
 @Book{		  perezjimenez2008clausulasa,
   address	= {Madrid},
   author	= {P{\'e}rez Jim{\'e}nez, Isabel},
