--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@InBook{	  szabolcsi2017strong,
+  author	= {Szabolcsi, Anna and Lohndal, Terje},
+  booktitle	= {The Wiley Blackwell Companion to Syntax},
+  pages		= {1-51},
+  publisher	= {John Wiley and Sons, Ltd},
+  title		= {Strong vs. Weak Islands},
+  year		= {2017}
+}
+
 @Book{		  citko2014phase,
   author	= {Citko, Barbara},
   publisher	= {Cambridge University Press},
