--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  grimau2021defencea,
+  author	= {Grimau, Berta},
+  journal	= {Synthese},
+  number	= {6},
+  pages		= {5253--5280},
+  title		= {In Defence of Higher-Level Plural Logic: Drawing
+		  Conclusions from Natural Language},
+  volume	= {198},
+  year		= {2021}
+}
+
+@Unpublished{	  winter2007multiple,
+  author	= {Winter, Yoad},
+  title		= {Multiple Coordination: Meaning Composition vs.the
+		  Syntax-Semantics Interface},
+  year		= {2007}
+}
+
 @InBook{	  szabolcsi2017strong,
   author	= {Szabolcsi, Anna and Lohndal, Terje},
   booktitle	= {The Wiley Blackwell Companion to Syntax},
