--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,73 @@
 
+@Article{	  larson2017revisiting,
+  author	= {Larson, Richard and LaTerza, Ivana},
+  journal	= {Revista Lingu\'iʃtica},
+  number	= {2},
+  pages		= {51--87},
+  title		= {Revisiting Article-S},
+  volume	= {13},
+  year		= {2017}
+}
+
+@Article{	  keenan1986semantic,
+  author	= {Keenan, Edward L. and Stavi, Jonathan},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {253--326},
+  title		= {A Semantic Characterization of Natural Language
+		  Determiners},
+  volume	= {9},
+  year		= {1986}
+}
+
+@Article{	  pullum1977autonomous,
+  author	= {Pullum, Geoffrey and Wilson, Deirdre},
+  journal	= {Language},
+  number	= {4},
+  pages		= {741--788},
+  title		= {Autonomous Syntax and the Analysis of Auxiliaries},
+  volume	= {53},
+  year		= {1977}
+}
+
+@InBook{	  larson2022applied,
+  author	= {Larson, Richard K. and Zhang, Chong},
+  booktitle	= {New Explorations in Chinese Theoretical Syntax: Studies in
+		  Honor of Yen-Hui Audrey Li},
+  editor	= {Simpson, Andrew},
+  pages		= {357-394},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Applied Objects in Mandarin and the Nature of Selection},
+  year		= {2022}
+}
+
+@Article{	  larson2021rethinking,
+  author	= {Larson, Richard K.},
+  journal	= {Language},
+  number	= {2},
+  pages		= {245--268},
+  title		= {Rethinking Cartography},
+  volume	= {97},
+  year		= {2021}
+}
+
+@Article{	  larson2019ap,
+  author	= {Larson, Richard K. and Denham, Kristin and Lobeck, Anne},
+  journal	= {Language},
+  number	= {3},
+  pages		= {e381--e393},
+  title		= {The {AP} Linguistics Initiative},
+  volume	= {95},
+  year		= {2019}
+}
+
+@Article{	  marcolli2025theta,
+  author	= {Marcolli, Matilde and Larson, Richard K.},
+  journal	= {arXiv:2503.06091},
+  title		= {Theta Theory: Operads and Coloring},
+  year		= {2025}
+}
+
 @Article{	  grimau2021defencea,
   author	= {Grimau, Berta},
   journal	= {Synthese},
